# dataInsight

./: app.py  pyproject.toml  style.css
.streamlit/: config.toml
