[tool.poetry]
name = "edaapp"
version = "0.1.0"
description = ""
authors = ["Manasforcebolt <manas.chauhan@cloudanalogy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
streamlit-timeline = "^0.0.2"
streamlit = "^1.29.0"
ydata-profiling = "4.0.0"
streamlit-pandas-profiling = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
